--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-﻿<!DOCTYPE HTML>
 <html>
 
 <head>
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=windows-1251">
-<title>MClaren</title>
+<title>lab </title>
 </head>
-<style>
-
-
-</style>
-	<frameset  cols="165px, *" frameborder=no border=0 framespacing=0>
-		<frame name="menu" src="menu.html" noresize marginheight=0 marginwidth=0 scrolling=no>
-		<frame name="main" src="main1.html" >
+	<frameset cols="165px, *">
+			<frame name="menu" src="menu.html" noresize marginheight=0 marginwidth=0 scrolling=no>
+			<frame name="main" src="main1.html" noresize marginheight=0 marginwidth=0 scrolling=no>
 	</frameset>
 
 </html>
