--- a/main1.html
+++ b/main1.html
@@ -9,7 +9,11 @@
 
 </style>
 <body bgcolor="#F5F5F5">
-1
+<table border='0' align='center'>
+	<tr>
+        <td colspan="6" align='center'><font color='red' size='+5'> Новости: <br><font color='Black' size='+3'> Мы сделали наше официальное видео.</font><br><iframe  src="http://www.youtube.com/embed/2zI4Hl02898?feature=player_detailpage" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+</td>
+	</tr>	
  	
 </body>
 
