--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 	<frameset cols="165px, *">
 			<frame name="menu" src="menu.html" noresize marginheight=0 marginwidth=0 scrolling=no>
-			<frame name="main" src="main1.html" noresize marginheight=0 marginwidth=0 scrolling=no>
+			<frame name="main" src="main1.html" noresize marginheight=0 marginwidth=0 >
 	</frameset>
 
 </html>
