--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,7 @@ a{
 	font-family: "Arial";
 	color="black";
 	padding: 15px;
+	top: 10%;
 	}
 a:visited{
 	color:black;
@@ -20,24 +21,29 @@ a:hover{
 	color: white;
 	background-color: black;
 }
+a.img{
+	top:0%;
+	padding: 0px;
+}
 a.a{
-	top:10%;
+	top:20%;
 }
 a.b{
-	top: 20%;
+	top: 30%;
 }
 a.c{
-	top: 30%;
+	top: 40%;
 }
 
 
 </style>
 <body bgcolor="#A9A9A9"  >
 <h4>
-	<a href="main1.html" target="main" name="bmenu" >&#8226;&#8195;Главная </a>
-	<a href="main2.html" target="main" name="bmenu" class="a" >&#8226;&#8195;История</a>
-	<a href="main3.html" target="main" name="bmenu" class="b" >&#8226;&#8195;Гордость</a>
-	<a href="main4.html" target="main" name="bmenu" class="c"  >&#8226;&#160;Фотографии</a>
+	<a href="main1.html" target="main" class="img"><img  id="img" src="logo1.png"  onMouseOver="document.getElementById('img').src='logo2.png'" onMouseOut="document.getElementById('img').src='logo1.png'" ></a>
+	<a href="main1.html" target="main" >&#8226;&#8195;Главная </a>
+	<a href="main2.html" target="main" class="a" >&#8226;&#8195;История</a>
+	<a href="main3.html" target="main" class="b" >&#8226;&#8195;Гордость</a>
+	<a href="main4.html" target="main" class="c"  >&#8226;&#160;Фотографии</a>
 </h4>
 </body>
 
