--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="CONTENT-TYPE" content="text/html; charset=windows-1251">
-<title>lab </title>
+<title>McLaren </title>
 </head>
 	<frameset cols="165px, *">
 			<frame name="menu" src="menu.html" noresize marginheight=0 marginwidth=0 scrolling=no>
